welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
while (haveBaggle())
                 ^Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
while (haveBaggle())
^